<resources>
    <string name="app_name">StudyJourny</string>
    <string name="tips">
            <p>
              选择<b>"快捷注册"</b>
            </p>
            <p>
              选择<b>"普通注册"</b>
            </p>
    </string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="welcome_268">欢迎</string>
    <string name="please_account">请输入手机账号</string>
    <string name="please_verification_code">请输入验证码</string>
    <string name="please_pwd">请输入密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="register_account">注册新账号</string>
    <string name="account_agreement">用户协议</string>
    <string name="account_agreement_read">我已经阅读并同意</string>
    <string name="login">登录</string>
    <string name="register">成功注册</string>
    <string name="or">OR</string>
    <string name="loginTitle">登录</string>
    <string name="registerTitle">注册</string>
    <string name="getverification">获取验证码</string>
</resources>
