<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/col_f7f7f9">


    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        style="@style/logincardViewStyle"
        android:layout_below="@id/login_toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="56px"
                android:text="kotlin"
                android:textColor="@color/col_878c96"
                android:textSize="30px" />

            <View
                android:id="@+id/login_top_line"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="122px"
                android:background="@color/col_eef1f1" />

            <EditText
                android:id="@+id/login_account_edt"
                style="@style/login_edt_style"
                android:layout_below="@id/login_top_line"
                android:drawableLeft="@drawable/login_account"
                android:hint="@string/please_account"
                android:inputType="number"
                android:theme="@style/loginEditTextline" />

            <EditText
                android:id="@+id/login_pwd_edt"
                style="@style/login_edt_style"
                android:layout_below="@id/login_account_edt"
                android:drawableLeft="@drawable/login_pwd"
                android:hint="@string/please_pwd"
                android:inputType="textPassword"
                android:maxLines="1"
                android:theme="@style/loginEditTextline" />


            <TextView
                android:id="@+id/login_forget_pwd_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_pwd_edt"
                android:layout_marginLeft="50px"
                android:layout_marginTop="38px"
                android:text="@string/forget_pwd"
                android:textColor="@color/col_80a8e1"
                android:textSize="24px" />

            <TextView
                android:id="@+id/login_register_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/login_pwd_edt"
                android:layout_marginLeft="50px"
                android:layout_marginRight="50px"
                android:layout_marginTop="38px"
                android:text="@string/register_account"
                android:textColor="@color/col_80a8e1"
                android:textSize="24px" />


            <TextView
                android:id="@+id/login_tv"
                android:layout_width="550px"
                android:layout_height="86px"
                android:layout_below="@+id/login_forget_pwd_tv"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="39dp"
                android:background="@drawable/btn_shape_blue"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="28px" />

            <TextView
                android:id="@+id/login_or_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_tv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100px"
                android:text="@string/or"
                android:textColor="@color/col_cccccc"
                android:textSize="24px" />

            <ImageView
                android:id="@+id/login_wechat_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_or_tv"
                android:layout_marginLeft="214px"
                android:layout_marginTop="60px"
                android:background="@drawable/login_wechat" />

            <ImageView
                android:id="@+id/login_qq_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/login_or_tv"
                android:layout_marginRight="214px"
                android:layout_marginTop="60px"
                android:background="@drawable/login_qq" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/login_toolbar"
        style="@style/toolBarTitleLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/login_title_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30px"
                android:background="@drawable/black_back"
                android:visibility="gone" />
            `

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/loginTitle"
                android:textColor="@color/col_333333"
                android:textSize="30px" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
</RelativeLayout>
